fix doxia image references to use files in markdown_doxia_files.

--- a/markdown-maven-plugin-eval/src/site/markdown_rt/html/header.html
+++ b/markdown-maven-plugin-eval/src/site/markdown_rt/html/header.html
@@ -22,7 +22,7 @@
     <div id="banner">
       <div class="pull-left">
         <div id="bannerLeft">
-          <h2>markdown-baseline</h2>
+          <h2>markdown-maven-plugin-eval</h2>
         </div>
       </div>
       <div class="pull-right"></div>
