--- a/markdown-maven-plugin-eval/src/site/markdown_rt/html/header.html
+++ b/markdown-maven-plugin-eval/src/site/markdown_rt/html/header.html
@@ -14,8 +14,10 @@
   <link rel="stylesheet" href="./css/apache-maven-fluido-1.6.min.css" />
   <link rel="stylesheet" href="./css/site.css" />
   <link rel="stylesheet" href="./css/print.css" media="print" />
-  <script type="text/javascript" src="./js/apache-maven-fluido-1.6.min.js">
-  </script>
+  <link rel="stylesheet" href="./js/highlight/styles/default.css" />
+  <script type="text/javascript" src="./js/apache-maven-fluido-1.6.min.js"></script>
+  <script src="./js/highlight/highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body class="topBarDisabled">
   <div class="container-fluid">
