--- a/markdown-maven-plugin-eval/src/site/markdown_rt/html/header.html
+++ b/markdown-maven-plugin-eval/src/site/markdown_rt/html/header.html
@@ -37,8 +37,7 @@
     </div>
     <div id="breadcrumbs">
       <ul class="breadcrumb">
-        <li id="publishDate">Last Published: TBD<span class="divider">|</span></li>
-        <li id="projectVersion">Version: 1.0-SNAPSHOT</li>
+        <li><a href="index.html">Return to main page</a></li>
       </ul>
     </div>
     <div class="row-fluid">
